Add basic saving game screen, implement saving game in database